# $Id: Changes,v 1.114 2004/03/23 04:50:08 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.73_03
        [ENHANCEMENTS]
        * WWW::Mechanize now sends an Accept-Encoding header of "identity"
          to always enforce plaintext responses. Preliminary support for
          Compress::Zlib is also there, but is disabled by default.

        * Added click_button() and select() methods.  The field() method
          can now take an arrayref of values, if appropriate. Thanks,
          Linda Lee Julien.

        [FIXES]
        * Still more fixes if the machine you're on doesn't have
          DNS pointing to it.

0.73_02 Tue Mar  2 23:51:05 CST 2004
        [FIXES]
        * The local changes use localhost as the local host name, instead
          of whatever host name that might be on the box, but not in DNS.
          Thanks to David Wheeler for letting me play on his box.

0.73_01 Sat Feb 28 23:55:46 CST 2004
        [ENHANCEMENTS]
        * URLs in META REFRESH tags are now treated as links.
        * t/taint.t makes sure that things that should be tainted are.

        [FIXES]
        * The http_proxy and HTTP_PROXY environment variables get
          deleted during the tests that access the dummy local server.
          This should let your tests pass, and clear up a lot of RT
          tickets.

0.72    Mon Jan 26 21:07:20 CST 2004
        [ENHANCEMENTS]
        * Added the set_visible() method, thanks to Peter Scott.

        [DOCUMENTATION]
        * Started the Cookbook at WWW::Mechanize::Cookbook.pod.

        [INTERNALS]
        * Made the globbing in Makefile.PL a little less command-line
          intensive.  Also fixed the missing files in MANIFEST.
        * Added t/pod-coverage.t for testing POD coverage.

0.71_02 Mon Dec 22 14:29:13 CST 2003
        [THINGS THAT MAY BREAK YOUR CODE]
        * Added a 5th, optional parameter to WWW::Mechanize::Link's
          constructor.  In 0.71_01, it was at the beginning of the