@@ -33,6 +33,7 @@
         <!-- new stuff -->
         <A HREF="http://nowhere.org/" Name="Here">NoWhere</A>
         <A HREF="http://nowhere.org/padded" Name=" Here "> NoWhere </A>
+        <A HREF="blongo.html">Blongo!</A>
     </body>
 </html>
 
