@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.114 2004/03/23 04:50:08 petdance Exp $
+# $Id: Changes,v 1.115 2004/03/23 05:23:15 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.73_03
@@ -10,6 +10,8 @@ Revision history for Perl extension WWW::Mechanize
         * Added click_button() and select() methods.  The field() method
           can now take an arrayref of values, if appropriate. Thanks,
           Linda Lee Julien.
+
+        * Added url_abs and url_abs_regex parms to find_all_links().
 
         [FIXES]
         * Still more fixes if the machine you're on doesn't have
